[tool.poetry]
name = "timely"
version = "0.1.0"
description = ""
authors = ["Peyton Duncan <dev@peytond.me>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.3"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
